new feature: Manager changing phone number.annnd finish.😎🔥
